--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body class="text-center">
-    <form action="/" class="form-signin" method="post">
+    <form action="/" class="form-signin" method="POST">
       <img class="mb-4" src="public/images/newsletter-talk-5309098-4440434.webp" alt="" width="100" height="100">
       <h1 class="h3 mb-3 font-weight-normal">Sign Up to My Newsletter</h1>
       <input type="text" name="fName" class="form-control top" placeholder="First Name" required autofocus>
