--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="public/css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
     <form action="/" class="form-signin" method="post">
-      <img class="mb-4" src="public/images/newsletter-talk-5309098-4440434.webp" alt="" width="100" height="100">
+      <img class="mb-4" src="/images/newsletter-talk-5309098-4440434.webp" alt="" width="100" height="100">
       <h1 class="h3 mb-3 font-weight-normal">Sign Up to My Newsletter</h1>
       <input type="text" name="fName" class="form-control top" placeholder="First Name" required autofocus>
       <input type="text" name="lName" class="form-control middle" placeholder="Last Name" required autofocus>
